[metadata]
name = satnogs_api_client
url = 
author = SatNOGS project
author_email = dev@satnogs.org
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Topic :: Communications :: Ham Radio
description = SatNOGS API client

[options]
packages = find:
include_package_data = True
install_requires =
    requests

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = satnogs_api_client/_version.py
versionfile_build = satnogs_api_client/_version.py
tag_prefix =
parentdir_prefix =
